Add library icon to header nav

--- a/index.html
+++ b/index.html
@@ -46,7 +46,18 @@
     <header>
       <nav class="navbar bg-body-tertiary border-bottom border-2">
         <div class="container-fluid">
-          <span class="navbar-brand mb-0 h1 fw-bold fs-3">Library</span>
+          <a
+            class="navbar-brand fs-3 d-flex align-items-center gap-2 fw-bold"
+            href="#"
+          >
+            <img
+              src="assets/icons/library-icon.png"
+              alt="Logo"
+              width="48"
+              height="44"
+            />
+            Library
+          </a>
         </div>
       </nav>
     </header>
