Add margin bottom to book-container

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </nav>
     </header>
     <main class="flex-grow-1 position-relative px-4 px-lg-5 py-4">
-      <div class="books-container" id="books-container"></div>
+      <div class="books-container mb-5" id="books-container"></div>
       <button
         type="button"
         class="btn btn-primary position-absolute rounded-circle toggle-modal-button fs-3 shadow"
