--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </h1>
               <button
                 type="button"
-                class="btn-close"
+                class="btn-close close-modal"
                 data-bs-dismiss="modal"
                 aria-label="Close"
               ></button>
@@ -154,12 +154,17 @@
             <div class="modal-footer">
               <button
                 type="button"
-                class="btn btn-secondary"
+                class="btn btn-secondary close-modal"
                 data-bs-dismiss="modal"
               >
                 Cancel
               </button>
-              <button type="button" class="btn btn-primary" id="add-button">
+              <button
+                type="button"
+                class="btn btn-primary"
+                id="add-button"
+                onclick="document.querySelector('#form-submit-btn').click()"
+              >
                 Add
               </button>
             </div>
